Version 1.1
------------

[X] - Added loader factory to support older versions of the file format to make it backwards compatible. 
      If you save a file in an older file format, it will be saved in the latest format.

[X] - Add a font selector and font size selector to the main toolbar.

[X] - Password entry dialog box now accepts Return key on each text box.

[ ] - Save window state to XML file.
